// Vitest Snapshot v1

exports[`<PostsTemplate /> > should match snapshot 1`] = `
.c6 {
  color: #0A1128;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c14 {
  color: #0A1128;
  font-size: 4.0rem;
  text-transform: none;
}

.c21 {
  color: #0A1128;
  font-size: 2.4rem;
  text-transform: none;
}

.c19 .c5 {
  margin: 0;
  margin-top: 1.6rem;
  margin-bottom: 1.6rem;
}

.c19 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c19:hover a {
  color: #dc143c;
}

.c19:hover img {
  opacity: 0.8;
}

.c20 {
  max-width: 100%;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.c17 {
  width: 100%;
}

.c18 {
  max-width: 120rem;
  max-height: 300rem;
  box-shadow: rgba(0,0,0,0.35) 0px 5px 15px;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(28rem,1fr));
  gap: 3.2rem;
  padding: 3.2rem;
  text-overflow: ellipsis;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c8 > img {
  width: 15rem;
  height: 15rem;
  border-radius: 50%;
  background: #333333;
}

.c10 {
  display: block;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  border-right: 0.5rem solid #0A1128;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c10:hover {
  border-right: 0.5rem solid #dc143c;
  color: #dc143c;
}

.c1 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c2 {
  background: #0A1128;
  padding: 3.2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  z-index: 1;
  width: 100%;
  max-width: 32rem;
  height: 100vh;
  top: 0;
  left: 0;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  overflow-y: auto;
  left: -35rem;
  overflow-y: hidden;
}

.c3 {
  margin: 0 auto;
  width: 100%;
}

.c9 {
  margin-bottom: 5rem;
}

.c4 .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  margin-bottom: 4.8rem;
}

.c4 .c5 img {
  margin: 0 auto;
  margin-bottom: 2rem;
  border: 0.1rem solid;
  border-color: #dc143c;
}

.c0 {
  position: fixed;
  top: 2.4rem;
  left: 26rem;
  color: #0A1128;
  z-index: 2;
  width: 3rem;
  height: 3rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  left: 1rem;
  color: #0A1128;
}

.c11 {
  margin-top: 6.4rem;
}

.c16 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  margin-bottom: 6.4rem;
}

.c22 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  padding: 3.2rem;
}

.c15 {
  font-size: 1.6rem;
}

.c15 p {
  margin: 4.0rem0;
}

.c15 a,
.c15 a:visited,
.c15 a:link {
  color: #dc143c;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c15 a:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c15 pre {
  background: #0A1128;
  padding: 2.4rem;
  font-family: monospace;
  color: #FFFFFF;
  margin: 4.0rem 0;
  width: 100%;
  overflow-x: auto;
  font-size: 1.6rem;
}

.c15 img {
  max-width: 100%;
}

.c15 .image {
  background: #DDDDDD;
  line-height: 0;
}

.c15 .image figcaption {
  font-size: 1.6rem;
  padding: 1.6rem;
  text-align: center;
  line-height: 1.3;
}

.c15 .image-style-side {
  max-width: 50%;
  float: right;
  margin: 2.4rem;
}

.c15 hr {
  border: none;
  border-bottom: 0.1rem solid #DDDDDD;
}

.c15 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
}

.c15 table {
  width: 100%;
  border-collapse: collapse;
}

.c15 table td,
.c15 table th {
  padding: 1.6rem;
  border: 0.1rem solid #DDDDDD;
}

.c15 ul,
.c15 ol {
  margin: 4.0rem;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: 5.6rem;
  width: 100%;
  max-width: 96rem;
  color: #333333;
  font-size: 1.6rem;
  margin: 0 auto;
}

.c12 .c5 {
  margin: 0 0 calc(1.6rem - 1rem);
}

.c12 .c7 >img {
  border: 0.3rem solid;
  border-color: rgb(74 222 128);
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  margin-left: 3.2rem;
  max-width: 48rem;
}

.c23 {
  text-align: center;
  border-top: 0.1rem solid #DDDDDD;
}

.c23 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c24 {
  position: fixed;
  color: #0A1128;
  border: 0.1rem solid;
  border-radius: 50rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 6;
}

@media (max-width:360px) {
  .c18 {
    grid-template-columns: 1fr;
  }
}

@media (max-width:768px) {
  .c2 {
    left: -35rem;
  }
}

@media (max-width:768px) {
  .c0 {
    left: -0.5rem;
  }
}

@media (max-width:768px) {
  .c15 {
    font-size: 1.6rem;
  }

  .c15 .image-style-side {
    max-width: 100%;
    float: none;
    margin: 0;
  }
}

@media (max-width:768px) {
  .c12 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-flow: column wrap;
    -ms-flex-flow: column wrap;
    flex-flow: column wrap;
  }

  .c12 > .c5 {
    margin: 0 0 2.4rem 0;
  }
}

@media (max-width:768px) {
  .c13 {
    margin-left: 0;
  }
}

<div>
  <div
    class=""
  >
    <a
      aria-label="Open or Close Menu"
      class="c0"
      href="#"
      title="Open or Close Menu"
    >
      <svg
        aria-hidden="true"
        aria-label="Open Menu"
        class="c1"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
        />
      </svg>
    </a>
    <div
      aria-hidden="true"
      class="c2"
    >
      <nav
        class="c3"
      >
        <div
          class="c4"
        >
          <h1
            class="c5 c6"
          >
            <a
              class="c7 c8"
              href="/"
              target="_self"
            >
              <img
                alt="Usuário teste"
                src="https://res.cloudinary.com/dlizakp2a/image/upload/v1614698965/Ubuntu_gel_by_Midge_Mantissa_Sinnaeve_7caea7ddb4.jpg"
              />
            </a>
          </h1>
        </div>
        <div
          class="c9"
        >
          <a
            class="c10"
            href="#target"
            target="_self"
          >
            O texto
          </a>
          <a
            class="c10"
            href="#link2"
            target="_blank"
          >
            o LINK 2
          </a>
        </div>
      </nav>
    </div>
    <div
      class="c11"
    >
      <header
        class="c12"
      >
        <h1
          class="c5 c6"
        >
          <a
            class="c7 c8"
            href="/"
            target="_blank"
          >
            <img
              alt="Usuário teste - Uma descrição para o seu blog."
              src="https://res.cloudinary.com/dlizakp2a/image/upload/v1614698965/Ubuntu_gel_by_Midge_Mantissa_Sinnaeve_7caea7ddb4.jpg"
            />
          </a>
        </h1>
        <div
          class="c13"
        >
          <h1
            class="c5 c14"
          >
            Usuário teste
          </h1>
          <div
            class="c15"
          >
            Uma descrição para o seu blog.
          </div>
        </div>
      </header>
    </div>
    <div
      class="c16"
    >
      <div
        class="c17"
      >
        <div
          class="c18"
        >
          <div
            class="c19"
          >
            <a
              href="/post/vis-nobis-veritus-maluisset-id-nonumy-adversarium"
            >
              <img
                alt="Vis nobis veritus maluisset id, nonumy adversarium"
                class="c20"
                src="https://res.cloudinary.com/dlizakp2a/image/upload/v1614698965/Ubuntu_gel_by_Midge_Mantissa_Sinnaeve_7caea7ddb4.jpg"
              />
            </a>
            <h2
              class="c5 c21"
            >
              <a
                href="/post/vis-nobis-veritus-maluisset-id-nonumy-adversarium"
              >
                Vis nobis veritus maluisset id, nonumy adversarium
              </a>
            </h2>
            <p
              class=""
            >
              Fugit aliquip erroribus eu eam, an mel vidit doctus. Vis nobis veritus maluisset id, nonumy adversarium neglegentur est ut. Tation persius pri eu, modo minim fastidii mei no. Ad tota pertinax definiebas eam.
            </p>
          </div>
          <div
            class="c19"
          >
            <a
              href="/post/sea-array-destructuring-dicat-fabulas-consetetur"
            >
              <img
                alt="Sea Array Destructuring dicat fabulas consetetur "
                class="c20"
                src="https://res.cloudinary.com/dlizakp2a/image/upload/v1614699042/Origin_of_nature_by_Julian_Tomasini_dcfdd17cbe.jpg"
              />
            </a>
            <h2
              class="c5 c21"
            >
              <a
                href="/post/sea-array-destructuring-dicat-fabulas-consetetur"
              >
                Sea Array Destructuring dicat fabulas consetetur 
              </a>
            </h2>
            <p
              class=""
            >
              Quod oblique mei ne, cetero delicatissimi sea cu, cu est harum dicit verterem. Tota forensibus ut usu, luptatum dignissim persecuti vel ex. Mea nostrud instructior cu, et referrentur theophrastus eum. Pro in iuvaret senserit.
            </p>
          </div>
          <div
            class="c19"
          >
            <a
              href="/post/quod-oblique-mei-ne-cetero-delicatissimi-sea"
            >
              <img
                alt="Quod oblique mei ne, cetero delicatissimi sea"
                class="c20"
                src="https://res.cloudinary.com/dlizakp2a/image/upload/v1614699042/Origin_of_nature_by_Julian_Tomasini_dcfdd17cbe.jpg"
              />
            </a>
            <h2
              class="c5 c21"
            >
              <a
                href="/post/quod-oblique-mei-ne-cetero-delicatissimi-sea"
              >
                Quod oblique mei ne, cetero delicatissimi sea
              </a>
            </h2>
            <p
              class=""
            >
              Et sed legere rationibus, vitae evertitur ad eam. Eu amet vero officiis vis. Ad nullam pericula neglegentur sit, vix ei regione legendos argumentum. Mei an quas convenire, nobis dicunt mei ut. 
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c22"
    >
      <footer
        class="c23"
      >
        <div
          class="c15"
        >
          <p>
            O texto da footer
          </p>
        </div>
      </footer>
    </div>
    <a
      aria-label="Go to top"
      class="c24"
      href="#"
      title="Go to top"
    >
      <svg
        aria-hidden="true"
        class="c1"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6 1.41 1.41z"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`<PostsTemplate /> > should match snapshot without posts  1`] = `
.c6 {
  color: #0A1128;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c14 {
  color: #0A1128;
  font-size: 4.0rem;
  text-transform: none;
}

.c17 {
  width: 100%;
}

.c19 {
  max-width: 120rem;
  max-height: 300rem;
  box-shadow: rgba(0,0,0,0.35) 0px 5px 15px;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(28rem,1fr));
  gap: 3.2rem;
  padding: 3.2rem;
  text-overflow: ellipsis;
}

.c18 {
  padding: 3.2rem;
  text-align: center;
  font-size: 1.6rem;
  color: #dc143c;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c8 > img {
  width: 15rem;
  height: 15rem;
  border-radius: 50%;
  background: #333333;
}

.c10 {
  display: block;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  border-right: 0.5rem solid #0A1128;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c10:hover {
  border-right: 0.5rem solid #dc143c;
  color: #dc143c;
}

.c1 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c2 {
  background: #0A1128;
  padding: 3.2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  z-index: 1;
  width: 100%;
  max-width: 32rem;
  height: 100vh;
  top: 0;
  left: 0;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  overflow-y: auto;
  left: -35rem;
  overflow-y: hidden;
}

.c3 {
  margin: 0 auto;
  width: 100%;
}

.c9 {
  margin-bottom: 5rem;
}

.c4 .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  margin-bottom: 4.8rem;
}

.c4 .c5 img {
  margin: 0 auto;
  margin-bottom: 2rem;
  border: 0.1rem solid;
  border-color: #dc143c;
}

.c0 {
  position: fixed;
  top: 2.4rem;
  left: 26rem;
  color: #0A1128;
  z-index: 2;
  width: 3rem;
  height: 3rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  left: 1rem;
  color: #0A1128;
}

.c11 {
  margin-top: 6.4rem;
}

.c16 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  margin-bottom: 6.4rem;
}

.c20 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  padding: 3.2rem;
}

.c15 {
  font-size: 1.6rem;
}

.c15 p {
  margin: 4.0rem0;
}

.c15 a,
.c15 a:visited,
.c15 a:link {
  color: #dc143c;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c15 a:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c15 pre {
  background: #0A1128;
  padding: 2.4rem;
  font-family: monospace;
  color: #FFFFFF;
  margin: 4.0rem 0;
  width: 100%;
  overflow-x: auto;
  font-size: 1.6rem;
}

.c15 img {
  max-width: 100%;
}

.c15 .image {
  background: #DDDDDD;
  line-height: 0;
}

.c15 .image figcaption {
  font-size: 1.6rem;
  padding: 1.6rem;
  text-align: center;
  line-height: 1.3;
}

.c15 .image-style-side {
  max-width: 50%;
  float: right;
  margin: 2.4rem;
}

.c15 hr {
  border: none;
  border-bottom: 0.1rem solid #DDDDDD;
}

.c15 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
}

.c15 table {
  width: 100%;
  border-collapse: collapse;
}

.c15 table td,
.c15 table th {
  padding: 1.6rem;
  border: 0.1rem solid #DDDDDD;
}

.c15 ul,
.c15 ol {
  margin: 4.0rem;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: 5.6rem;
  width: 100%;
  max-width: 96rem;
  color: #333333;
  font-size: 1.6rem;
  margin: 0 auto;
}

.c12 .c5 {
  margin: 0 0 calc(1.6rem - 1rem);
}

.c12 .c7 >img {
  border: 0.3rem solid;
  border-color: rgb(74 222 128);
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  margin-left: 3.2rem;
  max-width: 48rem;
}

.c21 {
  text-align: center;
  border-top: 0.1rem solid #DDDDDD;
}

.c21 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c22 {
  position: fixed;
  color: #0A1128;
  border: 0.1rem solid;
  border-radius: 50rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 6;
}

@media (max-width:360px) {
  .c19 {
    grid-template-columns: 1fr;
  }
}

@media (max-width:768px) {
  .c2 {
    left: -35rem;
  }
}

@media (max-width:768px) {
  .c0 {
    left: -0.5rem;
  }
}

@media (max-width:768px) {
  .c15 {
    font-size: 1.6rem;
  }

  .c15 .image-style-side {
    max-width: 100%;
    float: none;
    margin: 0;
  }
}

@media (max-width:768px) {
  .c12 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-flow: column wrap;
    -ms-flex-flow: column wrap;
    flex-flow: column wrap;
  }

  .c12 > .c5 {
    margin: 0 0 2.4rem 0;
  }
}

@media (max-width:768px) {
  .c13 {
    margin-left: 0;
  }
}

<div>
  <div
    class=""
  >
    <a
      aria-label="Open or Close Menu"
      class="c0"
      href="#"
      title="Open or Close Menu"
    >
      <svg
        aria-hidden="true"
        aria-label="Open Menu"
        class="c1"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
        />
      </svg>
    </a>
    <div
      aria-hidden="true"
      class="c2"
    >
      <nav
        class="c3"
      >
        <div
          class="c4"
        >
          <h1
            class="c5 c6"
          >
            <a
              class="c7 c8"
              href="/"
              target="_self"
            >
              <img
                alt="Usuário teste"
                src="https://res.cloudinary.com/dlizakp2a/image/upload/v1614698965/Ubuntu_gel_by_Midge_Mantissa_Sinnaeve_7caea7ddb4.jpg"
              />
            </a>
          </h1>
        </div>
        <div
          class="c9"
        >
          <a
            class="c10"
            href="#target"
            target="_self"
          >
            O texto
          </a>
          <a
            class="c10"
            href="#link2"
            target="_blank"
          >
            o LINK 2
          </a>
        </div>
      </nav>
    </div>
    <div
      class="c11"
    >
      <header
        class="c12"
      >
        <h1
          class="c5 c6"
        >
          <a
            class="c7 c8"
            href="/"
            target="_blank"
          >
            <img
              alt="Usuário teste - Uma descrição para o seu blog."
              src="https://res.cloudinary.com/dlizakp2a/image/upload/v1614698965/Ubuntu_gel_by_Midge_Mantissa_Sinnaeve_7caea7ddb4.jpg"
            />
          </a>
        </h1>
        <div
          class="c13"
        >
          <h1
            class="c5 c14"
          >
            Usuário teste
          </h1>
          <div
            class="c15"
          >
            Uma descrição para o seu blog.
          </div>
        </div>
      </header>
    </div>
    <div
      class="c16"
    >
      <div
        class="c17"
      >
        <p
          class="c18"
        >
          Nenhum post Foi encontrado
        </p>
        <div
          class="c19"
        />
      </div>
    </div>
    <div
      class="c20"
    >
      <footer
        class="c21"
      >
        <div
          class="c15"
        >
          <p>
            O texto da footer
          </p>
        </div>
      </footer>
    </div>
    <a
      aria-label="Go to top"
      class="c22"
      href="#"
      title="Go to top"
    >
      <svg
        aria-hidden="true"
        class="c1"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6 1.41 1.41z"
        />
      </svg>
    </a>
  </div>
</div>
`;
